v2 - Cabeçalho e rodapé e links
Divs adicionadas, Links adicionados no rodapé

--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/png" href="img/bbclogo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="img/bbclogo1.png">
     <title>'Things Happen' Trump defends Saudi crown Prince over Khashogi killing</Title>
-        https://www.bbc.com/news/articles/cn0gdkwp2p9o*/
+        <!-- https://www.bbc.com/news/articles/cn0gdkwp2p9o*/ Link do site para copiar-->
 </head>
 <body>
+    <table style="width: 100%;">
+        <tr>
+            <td style="width: 33%; align-items: left;">
+                <img src="img/bbclogo1.png" alt="BBC Logo" style="width: 200px; height: auto;">
+            </td>
+            <td style="width: 33%;">
+                <img src="img/bbclogo1.png" alt="BBC Logo" style="width: 200px; height: auto;">
+            </td>
+            <td style="display: inline;">
+                <div style="display:block; margin-left: 500px;"><button style="width:100px; height: 50px;">Register</button></div>
+                <div style="display:block; margin-left: 500px;"><button style="width:100px; height: 50px;">Sign In</button></div>
+            </td>
+        </tr>
+    </table>
     <h1>'Things Happen' Trump defends Saudi crown Prince over Khashogi killing</h1>
     <p>2 hours ago</p>
     <p>Bernd Debusmann Jr</p>
@@ -83,5 +98,15 @@
         
         Biden did not host the crown prince and vowed to make Saudi Arabia a "pariah" over its human rights record. 
         In 2022, however, Biden visited the kingdom to reach agreement on other issues.</p>
+    <table style="width: 100%;">
+        <tr>
+            <td style="width:33%; align-items:left"><img src="img/bbclogo1.png" alt="Like" style="width:50px; height:50px;"></td>
+            <td style="width:33%; align-items:center"><img src="img/bbclogo1.png" alt="Comment" style="width:50px; height:50px;"></td>
+            <td style="width:33%; align-items:right"><img src="img/bbclogo1.png" alt="Share" style="width:50px; height:50px;"></td>
+        </tr>
+    </table>
+    <a href="https://www.bbc.com/pages/terms-of-use">Terms of use</a> <a href="https://www.bbc.com/pages/subscription-terms">Subscription Terms</a> <a href="https://www.bbc.co.uk/aboutthebbc">About the BBC</a> <a href="https://www.bbc.com/pages/privacy-policy">Privacy Policy</a> <a href="https://www.bbc.com/usingthebbc/cookies/">Cookies</a> <a href="https://www.bbc.co.uk/accessibility/">Accessibility Help</a> <a href="https://www.bbc.com/contact/">Contact the BBC</a> <a href="https://www.bbc.com/advertising/">Advertise with us</a>
+    <a href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/">Do not share or sell my info</a> <a href="https://help.bbc.com/hc/">BBC.com Help & FAQs</a> <a href="https://www.bbc.com/pages/content-index">Content Index</a>
+    <p>Copyright 2025 BBC. All rights reserved. The BBC is not responsible for the content of external sites. Read about our approach to external linking.</p>
 </body>
 </html>
