--- a/index.html
+++ b/index.html
@@ -6,28 +6,56 @@
     <link rel="icon" type="image/png" href="img/bbclogo1.png">
     <title>'Things Happen' Trump defends Saudi crown Prince over Khashogi killing</Title>
         <!-- https://www.bbc.com/news/articles/cn0gdkwp2p9o*/ Link do site para copiar-->
+         <style>
+            h1{
+                font: bold 27px Serif, Sans-Serif;
+            }
+            #button1{
+                background-color: black;
+                color: white;
+                font-size: 20px;
+                border: none;
+                cursor: default;
+                padding: 6px 12px;
+            }
+            #button2{
+                background-color: rgb(255, 255, 255);
+                color: black;
+                font-size: 20px;
+                border: none;
+                cursor: default;
+                padding: 6px 12px;
+                font-weight: bolder;
+            }
+            p{
+                font: 32px Serif, Sans-Serif;
+            }
+         </style>
 </head>
 <body>
+<header>
     <table style="width: 100%;">
         <tr>
             <td style="width: 33%; align-items: left;">
+                <img src="img/imglupa.png" alt="BBC Logo" style="width: 65px; height: 45px;">
+            </td>
+            <td style="width: 33%; text-align: center;">
                 <img src="img/bbclogo1.png" alt="BBC Logo" style="width: 200px; height: auto;">
             </td>
-            <td style="width: 33%;">
-                <img src="img/bbclogo1.png" alt="BBC Logo" style="width: 200px; height: auto;">
-            </td>
-            <td style="display: inline;">
-                <div style="display:block; margin-left: 500px;"><button style="width:100px; height: 50px;">Register</button></div>
-                <div style="display:block; margin-left: 500px;"><button style="width:100px; height: 50px;">Sign In</button></div>
+            <td style="width: 33%; text-align: right;">
+                <button id="button1" style="width:120px; height: 50px;">Register</button>
+                <button id="button2" style="width:120px; height: 50px;">Sign In</button>
             </td>
         </tr>
     </table>
-    <h1>'Things Happen' Trump defends Saudi crown Prince over Khashogi killing</h1>
-    <p>2 hours ago</p>
-    <p>Bernd Debusmann Jr</p>
-    <p>at the White House</p>
-    <img src="img/trumpandjamal.jpg" alt="Trump and Jamal Khashogi">
-    <p>US President Donald Trump has said Saudi Crown Prince Mohammed bin Salman
+</header>
+    <body>
+    <main>
+        <h1>'Things Happen' Trump defends Saudi crown Prince over Khashogi killing</h1>
+        <p>2 hours ago</p>
+        <p>at the White House</p>
+        <img src="img/trumpandjamal.jpg" alt="Trump and Jamal Khashogi">
+        <p style="width: 1300px; font:">US President Donald Trump has said Saudi Crown Prince Mohammed bin Salman
        "knew nothing" about the 2018 killing of journalist Jamal Khashoggi, as he welcomed
        the kingdom's de facto ruler to the White House.
 
@@ -98,6 +126,9 @@
         
         Biden did not host the crown prince and vowed to make Saudi Arabia a "pariah" over its human rights record. 
         In 2022, however, Biden visited the kingdom to reach agreement on other issues.</p>
+    </main>
+    </body>
+    <footer>
     <table style="width: 100%;">
         <tr>
             <td style="width:33%; align-items:left"><img src="img/bbclogo1.png" alt="Like" style="width:50px; height:50px;"></td>
@@ -108,5 +139,5 @@
     <a href="https://www.bbc.com/pages/terms-of-use">Terms of use</a> <a href="https://www.bbc.com/pages/subscription-terms">Subscription Terms</a> <a href="https://www.bbc.co.uk/aboutthebbc">About the BBC</a> <a href="https://www.bbc.com/pages/privacy-policy">Privacy Policy</a> <a href="https://www.bbc.com/usingthebbc/cookies/">Cookies</a> <a href="https://www.bbc.co.uk/accessibility/">Accessibility Help</a> <a href="https://www.bbc.com/contact/">Contact the BBC</a> <a href="https://www.bbc.com/advertising/">Advertise with us</a>
     <a href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/">Do not share or sell my info</a> <a href="https://help.bbc.com/hc/">BBC.com Help & FAQs</a> <a href="https://www.bbc.com/pages/content-index">Content Index</a>
     <p>Copyright 2025 BBC. All rights reserved. The BBC is not responsible for the content of external sites. Read about our approach to external linking.</p>
-</body>
+    </footer>
 </html>
