--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="site-header">    
         <table style="width: 100%; padding-bottom: 12px;padding-top: 12px;padding-left: 10px; padding-right: 10px;">
             <tr>
                 <td style="width: 33%; align-items: left;">
@@ -27,10 +27,8 @@
             </tr>
         </table>
     </header>
-
-    <body>
         <main>
-            <div style="display: flex; justify-content: center; gap: 0px; margin-bottom: 20px;">
+            <section class="nav-buttons">
                 <button>Home</button>
                 <button>News</button>
                 <button>Sport</button>
@@ -43,8 +41,8 @@
                 <button>Audio</button>
                 <button>Video</button>
                 <button>Live</button>
-            </div>
-            <div>
+            </section>
+            <div class="container">
                 <h1>'Things Happen' Trump defends Saudi<br>
                     crown Prince over Khashogi killing</h1>
                 <p>19 November 2025 <a href="#">Share</a> <a href="#">Save</a></p>
@@ -271,7 +269,6 @@
                 <p><a href="#">Home</a><a href="#">News</a><a href="#">Sport</a><a href="#">Business</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a>
             </div>
         </main>
-    </body>
     <footer>
         <table style="width: 100%;">
             <tr>
@@ -297,5 +294,5 @@
         <p>Copyright 2025 BBC. All rights reserved. The BBC is not responsible for the content of external sites. Read
             about our approach to external linking.</p>
     </footer>
-
+    </body>
 </html>
