--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <table style="width: 100%; padding-bottom: 12px;padding-top: 12px;padding-left: 10px; padding-right: 10px;">
             <tr>
                 <td style="width: 33%; align-items: left;">
-                    <img src="img/imglupa.png" alt="BBC Logo" style="width: 65px; height: 45px;padding-left: 10px;">
+                    <a href=""><img src="img/imglupa.png" alt="BBC Logo" style="width: 65px; height: 45px;padding-left: 10px;">
                 </td>
                 <td style="width: 33%; text-align: center;">
-                    <img src="img/bbclogo1.png" alt="BBC Logo" style="width: 200px; height: auto;">
+                    <a href=""><img src="img/bbclogo1.png" alt="BBC Logo" style="width: 200px; height: auto;"></a>
                 </td>
                 <td style="width: 33%; text-align: right;gap: 40px;">
                     <button id="button1" style="width:120px; height: 50px;">Register</button>
@@ -27,30 +27,71 @@
             </tr>
         </table>
     </header>
-        <main>
-            <section class="nav-buttons">
-                <button>Home</button>
-                <button>News</button>
-                <button>Sport</button>
-                <button>Business</button>
-                <button>Innovation</button>
-                <button>Culture</button>
-                <button>Arts</button>
-                <button>Travel</button>
-                <button>Earth</button>
-                <button>Audio</button>
-                <button>Video</button>
-                <button>Live</button>
+        <main></main>
             </section>
-            <div class="container">
+                <div>
+                    <table style="width: 100%; padding-bottom: 12px; padding-top: 12px; padding-left: 10px; padding-right: 10px;">
+                        <tr>
+                            <th>
+                                <a href="#">Home</a>
+                            </th>
+                            <th>
+                                <a href="#">News</a>
+                            </th>
+                            <th>
+                                <a href="#">Sport</a>
+                            </th>
+                            <th>
+                                <a href="#">Business</a>
+                            </th>
+                            <th>
+                                <a href="#">Innovation</a>
+                            </th>
+                            <th>
+                                <a href="#">Health</a>
+                            </th>
+                            <th>
+                                <a href="#">Culture</a>
+                            </th>
+                            <th>
+                                <a href="#">Arts</a>
+                            </th>
+                            <th>
+                                <a href="#">Travel</a>
+                            </th>
+                            <th>
+                                <a href="#">Earth</a>
+                            </th>
+                            <th>
+                                <a href="#">Audio</a>
+                            </th>
+                            <th>
+                                <a href="#">Video</a>
+                            </th>
+                            <th>
+                                <a href="#">Live</a>
+                            </th>                        
+                        </tr>
+                    </table>
                 <h1>'Things Happen' Trump defends Saudi<br>
                     crown Prince over Khashogi killing</h1>
-                <p>19 November 2025 <a href="#">Share</a> <a href="#">Save</a></p>
-                <p>Bernd Debusmann Jr</p>
-                <p>at the White House</p>
-                <img src="img/trumpandjamal.jpg" alt="Trump and Jamal Khashogi">
-                <p>Watch: Trump says Saudi crown prince "knew nothing" about Jamal Khashoggi's murder</p>
-
+                        <table style="width: 100%;"
+                            <tr>
+                                <td style="width: 80%;">
+                                    <p style="font-size: 20px; color: 545658;">19 November 2025</p>
+                                </td>
+                                <td style="width: 10%;">
+                                    <a href="#">Share</a>
+                                </td>
+                                <td style="width: 10%;">
+                                    <a href="#">Save</a> 
+                                </td>
+                            </tr>
+                    </table>
+                <p style="font-size: 25px;"><b>Bernd Debusmann Jr</b></p>
+                <p style="font-size: 20px; color: #545658;">at the White House</p>
+                <img src="img/trumpandjamal.jpg" alt="Trump and Jamal Khashogi"><br>
+                <caption style="color: grey;">Watch: Trump says Saudi crown prince "knew nothing" about Jamal Khashoggi's murder</caption>
                 <p>US President Donald Trump has said Saudi Crown Prince Mohammed bin Salman
                     "knew nothing" about the 2018 killing of journalist Jamal Khashoggi, as he welcomed
                     the kingdom's de facto ruler to the White House.</p>
@@ -87,8 +128,8 @@
                 <p>While dozens of Saudi officials faced sanctions in the wake of the assassination, none
                     directly targeted the crown prince.</p>
 
-                <img src="./img/Hananimg.png" style="width:728px; height:410px; margin:auto">
-                <p>Hanan Khashoggi, Jamal Khashoggi's widow, speaks to BBC after Trump defends Saudi crown prince</p>
+                <img src="./img/Hananimg.png" style="width:728px; height:410px; margin:auto"><br>
+                <caption style="color: grey;">Hanan Khashoggi, Jamal Khashoggi's widow, speaks to BBC after Trump defends Saudi crown prince</caption>
 
                 <p>Reacting to Trump's comments, Khashoggi's widow, Hanan, told BBC Newsnight the US president's defence
                     of
@@ -137,45 +178,103 @@
                 <p>The crown prince's visit to Washington continues with a gala dinner on Tuesday night, followed by an
                     investment summit on Wednesday.</p>
 
-                <p>Portuguese footballer Cristiano Ronaldo - who plays in the Saudi professional league - was also
-                    present
-                    at the dinner.</p>
+                <p>Portuguese footballer Cristiano Ronaldo - who plays in the Saudi professional league - <a href="https://www.bbc.com/news/articles/c993e74pxd7o">was also
+                    present at the dinner</a>.</p>
 
                 <p>Biden did not host the crown prince and vowed to make Saudi Arabia a "pariah" over its human rights
                     record. In 2022, however, Biden visited the kingdom to reach agreement on other issues.</p>
-                <div>
-                    <a href="#">US to sell F-35 jets to Saudi Arabia, Trump says ahead of crown prince's visit</a>
-                    <a href="#">Why the Pakistan-Saudi Arabia defence pact is unsettling India</a>
-                    <a href="#">Saudi prince 'approved Khashoggi killing' - US</a>
-                </div>
-                <div>
-                    <button>Mohammed bin Salman</button><button>Saudi Arabia</button><button>United
-                        States</button><button>Killing of Jamal Khashoggi</button>
+                    <table style="width: 100%;">
+                        <tr>
+                            <th style="width: 50%;">
+                                <a href="https://www.bbc.com/news/articles/c7512rkvg7ro">US to sell F-35 jets to Saudi Arabia, Trump says ahead of crown prince's visit</a>
+                            </th>
+                            <th style="width: 50%;">
+                                <a href="https://www.bbc.com/news/world-us-canada-56213528">Saudi prince 'approved Khashoggi killing' - US</a>
+                            </th>
+                        </tr>
+                        <tr style="width: 50%">
+                            <a href="https://www.bbc.com/news/articles/c147gkxyyrmo">Why the Pakistan-Saudi Arabia defence pact is unsettling India</a>
+                        </tr>
+                    </table>
+                    <button>Mohammed bin Salman</button><button>Saudi Arabia</button><button>United States</button><button>Killing of Jamal Khashoggi</button>
+                    <br>
                     <button>Donald Trump</button>
-                </div>
-            </div>
-            <div>
-                <p>RELATED</p>
-                <div>
-                    <a href="#">US citizen jailed in Saudi Arabia for criticising regime allowed to return to US</a>
-                    <a href="#">Cristiano Ronaldo attends White House dinner alongside Saudi crown prince</a>
-                    <a href="#">Trump says Saudi crown prince 'knew nothing' about Jamal Khashoggi's murder</a>
-                </div>
-            </div>
+                <p style="font-size: 20px;"><strong>RELATED</strong></p>
+                <table style="width: 100%;">
+                    <tr>
+                    <td style="width: 33%;">
+                        <a href="#">Rights groups condemn new record number of executions in Saudi Arabia</a>
+                    </td>
+                    <td style="width: 33%;">
+                        <a href="#">US citizen jailed in Saudi Arabia for criticising regime allowed to return to US</a>
+                    </td>
+                    <td style="width: 33%;">
+                        <a href="#">Cristiano Ronaldo attends White House dinner alongside Saudi crown prince</a>
+                    </td>
+                    </tr>   
+                </table>
+                <br><br>
             <p>MORE FROM THE BBC</p>
-            <div>
                 <table>
                     <tr>
                         <td>
                             <p>Just now</p>
                         </td>
                         <td>
-                            <a href="#">Yellow police tape that says Police Line D Not Cross over a blurred image of a
+                            <a href="https://www.bbc.com/news/articles/cgl8y4gx9lyo"><h2>Protesters outside US in Nuuk, Greenland, on 15 March 2025 US discussing options to acquire Greenland, including use of military, says White House</h2></a>
+                            <h3>It came as European allies rallied behind Denmark after renewed US insistence it must have Greenland.</h3>
+                        </td>
+                        <td>
+                            <img src="./img/Hananimg.png">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>1 hr ago</p>
+                        </td>
+                        <td>
+                            <a href="https://www.bbc.com/news/articles/c7v0deypjl4o"><h2>US may intercept and seize oil tanker heading for Europe, reports say</h2></a>
+                            <h3>US officials have a warrant to seize the Russian-flagged ship accused of breaking sanctions</h3>
+                        </td>
+                        <td>
+                            <img src="./img/Hananimg.png">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>5 hrs ago</p>
+                        </td>
+                        <td>
+                            <a href="https://www.bbc.com/news/articles/cgl8y4gx9lyo"><h2>Yellow police tape that says Police Line D Not Cross over a blurred image of a
                                 vehicle and red and blue lights. Suspect in custody after one killed in Kentucky
                                 university shooting</a>
-                            <p>
-                                The campus was placed on lockdown as authorities responded to "an active aggressor"
-                            </p>
+                            <h3>The campus was placed on lockdown as authorities responded to "an active aggressor"</h3>
+                        </td>
+                        <td>
+                            <img src="./img/Hananimg.png">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>5 hrs ago</p>
+                        </td>
+                        <td>
+                            <a href="#"><h2>Doug LaMalfaUS Congressman Doug LaMalfa dies unexpectedly at 65</h2></a>
+                            <h3>The death of LaMalfa, a Trump ally, shaves the Republican majority in the US House of Representatives to just a few seats.</h3>
+                        </td>
+                        <td>
+                            <img src="./img/Hananimg.png">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>5 hrs ago now</p>
+                        </td>
+                        <td>
+                            <a href="https://www.bbc.com/news/articles/cgl8y4gx9lyo"><h2>>Yellow police tape that says Police Line D Not Cross over a blurred image of a
+                                vehicle and red and blue lights. Suspect in custody after one killed in Kentucky
+                                university shooting</h2></a>
+                            <h3>The campus was placed on lockdown as authorities responded to "an active aggressor"</h3>
                         </td>
                         <td>
                             <img src="./img/Hananimg.png">
@@ -186,88 +285,18 @@
                             <p>Just now</p>
                         </td>
                         <td>
-                            <a href="#">Yellow police tape that says Police Line D Not Cross over a blurred image of a
+                            <a href="https://www.bbc.com/news/articles/cgl8y4gx9lyo"><h2>Yellow police tape that says Police Line D Not Cross over a blurred image of a
                                 vehicle and red and blue lights. Suspect in custody after one killed in Kentucky
                                 university shooting</a>
-                            <p>
-                                The campus was placed on lockdown as authorities responded to "an active aggressor"
-                            </p>
+                            <h3>The campus was placed on lockdown as authorities responded to "an active aggressor"</h3>
                         </td>
                         <td>
                             <img src="./img/Hananimg.png">
                         </td>
                     </tr>
-                    <tr>
-                        <td>
-                            <p>Just now</p>
-                        </td>
-                        <td>
-                            <a href="#">Yellow police tape that says Police Line D Not Cross over a blurred image of a
-                                vehicle and red and blue lights. Suspect in custody after one killed in Kentucky
-                                university shooting</a>
-                            <p>
-                                The campus was placed on lockdown as authorities responded to "an active aggressor"
-                            </p>
-                        </td>
-                        <td>
-                            <img src="./img/Hananimg.png">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p>Just now</p>
-                        </td>
-                        <td>
-                            <a href="#">Yellow police tape that says Police Line D Not Cross over a blurred image of a
-                                vehicle and red and blue lights. Suspect in custody after one killed in Kentucky
-                                university shooting</a>
-                            <p>
-                                The campus was placed on lockdown as authorities responded to "an active aggressor"
-                            </p>
-                        </td>
-                        <td>
-                            <img src="./img/Hananimg.png">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p>Just now</p>
-                        </td>
-                        <td>
-                            <a href="#">Yellow police tape that says Police Line D Not Cross over a blurred image of a
-                                vehicle and red and blue lights. Suspect in custody after one killed in Kentucky
-                                university shooting</a>
-                            <p>
-                                The campus was placed on lockdown as authorities responded to "an active aggressor"
-                            </p>
-                        </td>
-                        <td>
-                            <img src="./img/Hananimg.png">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p>Just now</p>
-                        </td>
-                        <td>
-                            <a href="#">Yellow police tape that says Police Line D Not Cross over a blurred image of a
-                                vehicle and red and blue lights. Suspect in custody after one killed in Kentucky
-                                university shooting</a>
-                            <p>
-                                The campus was placed on lockdown as authorities responded to "an active aggressor"
-                            </p>
-                        </td>
-                        <td>
-                            <img src="./img/Hananimg.png">
-                        </td>
-                    </tr>
-
                 </table>
-            </div>
-            <div>
                 <img src="img/bbclogo1.png" alt="BBC Logo" style="width: 200px; height: auto; margin-top: 20px;">
-                <p><a href="#">Home</a><a href="#">News</a><a href="#">Sport</a><a href="#">Business</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a>
-            </div>
+                <!-- -<p><a href="#">Home</a><a href="#">News</a><a href="#">Sport</a><a href="#">Business</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a><a href="#">Home</a>
         </main>
     <footer>
         <table style="width: 100%;">
@@ -293,6 +322,8 @@
             href="https://www.bbc.com/pages/content-index">Content Index</a>
         <p>Copyright 2025 BBC. All rights reserved. The BBC is not responsible for the content of external sites. Read
             about our approach to external linking.</p>
+            <div>
     </footer>
     </body>
+-->
 </html>
